Build 0012

Not the real thing build for the Hesperian Beta Test - just going out to me, Tawnia and Saq.
I'll smoke test it on my iOS5 device, and assuming it goes well, I'll be ready to do the official build.

One note for Saq:
Re:
"Note that we have a new loading screen image to be used for the packaged app, loading-app.png in the images folder. The file loading.png is a lower quality version of the same image that is used by the "fullscreen webapp" version in iOS."
loading-app.png is 320 x 480

Ideally we need 640x960 (Retina) and it's smaller cousin 320x480 (Default@2x.png and Default.png in iOS file naming).
For this, I've scaled our 320 x 480 to 640x960 as needed.


(You can view the latest build in a browser at http://az.antoninus.org/latest/app/index.html)