@@ -9,7 +9,7 @@
 # serve the correct content type for the manifest.
 #
 
-BUILD=0012
+BUILD=0013
 SITEBUILDDIR=site/www/archive/$(BUILD)
 
 TMP=./tmp
